libSieve 2.1.10
--------------

- Fixed sieve2_listextensions.

- Fixed segfault when client returns null
  pointers from the getenvelope callback.

libSieve 2.1.9
--------------

- Fixed subaddress, getenvelope and vacation.

- Added additional debugging messages.

- Added new and updated draft rfc's.

libSieve 2.1.8
--------------

- Created a testsuite of scripts and messages
  to exercise RFC and Draft comformance.

- Fixed a memory allocation issue that prevented
  the library from being used again after sieve2_free
  had been called.

libSieve 2.1.7
--------------

- Rewrote the API again. I finally like it!

- Settled on the LGPL for all of my new code.

- Replaced the RSA MD5 implementation with
  a public domain version.

- Documentation updated for the new API.

libSieve 2.1.6
--------------

- Added a set of error-retrieval functions.

libSieve 2.1.5
--------------
(formerly libsieve 2.2.0_pre3)

- CFLAGS now includes -Wall and compiles very
  cleanly. Messages from lex/yacc are benign.

- Namespace cleanups: internal global functions
  prefixed with "libsieve_" for consistency.

- Local regex library, borrowed from GNU glibc
  2.3.2. Used under LGPL license version 2.1.

- Compiles under Win32 with Visual C++, with
  many thanks to Brandon Knitter.

libSieve 2.1.4
--------------
(formerly libsieve 2.2.0_pre1)

- Sieve 2 API has begun. More changes should
  be expected during the 2.1 series.

- All later-CMU code removed and/or replaced;
  original licensing is now entirely old-CMU
  style and augmented by the GNU GPL as it is
  placed on all new code and applies to the 
  distribution as a whole from here forward.

- "Poor man's parsers" for RFC 2/822 addresses
  and message headers replaced with lex/yacc.

- Extensive Valgrinding performed to identify
  memory leaks; no known leaks remain.

- Many more changes, amounting to perhaps a
  70% rewrite of all code.

libSieve 2.1.3
--------------

- Accepted patches from Timo Sirainen:
